# imagehandler

./: .gitignore  README.md  START_HERE.txt  dependency.sh  pyproject.toml  run.sh  setup.sh
docs/: bisenet_onnx.md
imagehandler/: __init__.py  alpha_quality.py  bg_refine.py  bg_remove.py  cli.py  debug.py  extract_items.py  extract_items_alpha.py  extract_items_hybrid.py  extract_items_plus.py  extract_items_safe.py  fallback.py  head_refine.py  io.py  item_postprocess.py  item_refine.py  judge.py  mask_ops.py  menuitem.py  person_clothing.py  reports.py  split_sheet.py  test_class.py  workspace.py
imagehandler/batch/: __init__.py  files.py
imagehandler/commands/: __init__.py  background.py  common.py  garment.py  items.py  menu.py  quality.py  sheet.py
out_retry/: fallback.json  manifest.json
tools/: download_sam_model.py  export_bisenet_from_face_parsing_repo.py  refine_item_jobs.py  verify_bisenet_onnx.py
